Updated CSS for extras to same class, fixed spacing

--- a/static/css/perdiem.css
+++ b/static/css/perdiem.css
@@ -591,19 +591,7 @@ h2.nav-name {
     font-family: ;
 }
 
-.privacy-padding {
-    padding: 40px;
-    max-width: 800px;
-    margin: 0 auto;
-}
-
-.terms-padding {
-    padding: 40px;
-    max-width: 800px;
-    margin: 0 auto;
-}
-
-.faq-padding {
+.extra-padding-wide {
     padding: 40px;
     max-width: 800px;
     margin: 0 auto;
